Added logger and dto
